--- a/style.css
+++ b/style.css
@@ -11,3 +11,17 @@
   width: 100%;
   height: 100%;
 }
+
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
