--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@ p {
   font-family: verdana;
   font-size: 20px;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
