--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
   height: 0;
 }
 .iframe-container iframe{
-  position: absolute;
+  position: center;
   top:0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
 }
 
 body {
