--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   height: 0;
 }
 .iframe-container iframe{
-  position: center;
+  position: absolute;
   top:0;
   left: 0;
   width: 50%;
@@ -22,7 +22,7 @@ h1 {
 }
 
 p {
-  font-family: verdana;
+  font-family: arial;
   font-size: 20px;
 }
 
