--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .iframe-container{
-  position: relative;
+  position: absolute;
+  top: 0; right: 0;
+  bottom: 0; left: 0;
   width: 100%;
   padding-bottom: 56.25%; 
   height: 0;
@@ -33,3 +35,4 @@ p {
   font-family: arial;
   font-size: 20px;
 }
+
