--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 .iframe-container{
-  position: absolute;
-  top: 0; right: 150;
-  bottom: 0; left: 0;
+  position: center;
   width: 100%;
   padding-bottom: 56.25%; 
   height: 0;
