--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
 
 
 body {
-  background-color: lightblue;
+  background-color: #00ff00;
 }
 
 h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
