--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ h1 {
   text-align: center;
 }
 
+h1 {
+  color: black;
+  text-align: center;
+  font-size: 80%;
+}
+
 p {
   font-family: arial;
   font-size: 20px;
